AjaxControlToolkit/Styles/Slider.css
.ajax__slider_h_rail {
    position: relative;
    height: 22px;
    width: 150px;
    background-repeat: repeat-x;
}

.ajax__slider_h_handle {
    position: absolute;
    height: 22px;
    width: 10px;
}

.ajax__slider_v_rail {
    position: relative;
    width: 22px;
    height: 150px;
    background-repeat: repeat-y;
}

.ajax__slider_v_handle {
    position: absolute;
    height: 10px;
    width: 22px;
}

